@@ -3,6 +3,7 @@
     * src/mos6502/gen.c:
       Remove dead/redundant code.
       Improve loadRegFromAop, genRightShift and genLeftShift.
+      Rename multiple shift functions.
 
 2025-02-22 Gabriele Gorla <gorlik@yahoo.com>
 
